--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.3|^8.0",
         "babenkoivan/elastic-migrations": "^1.5",
         "babenkoivan/elastic-scout-driver": "^1.3",
+        "beyondcode/laravel-websockets": "^1.12",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -15,7 +16,8 @@
         "laravel/passport": "^10.1",
         "laravel/scout": "^8.6",
         "laravel/socialite": "^5.2",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "pusher/pusher-php-server": "~5.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
